--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "compilerOptions": {
+    "compilerOptions": { 
+      "jsx": "react",
+      "esModuleInterop": true, 
+     
       // ...
       "baseUrl": ".",
       "paths": {
