--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.0",
     "lucide-react": "^0.344.0",
